[package]
name = "filter_alfredworkflow"
version = "0.1.0"
authors = ["Alpha Chen <alpha.chen@gmail.com>"]

[[bin]]
name = "alfredworkflow_clean"
path = "src/bin/clean.rs"

[dependencies]
plist = { git = "https://github.com/ebarnard/rust-plist.git", rev = "8b008d1" }

[profile.release]
panic = "abort"
